--- a/index.html
+++ b/index.html
@@ -3,14 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Start with Bootstrap4</title>
     <link rel="stylesheet" href="./style/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
-        <h1>Hello World</h1>
+        <nav>
+            <ul class="list-inline text-primary">
+                <li class="list-inline-item">Start</li>
+                <li class="list-inline-item">Blog</li>
+                <li class="list-inline-item">Użytkownicy</li>
+                <li class="list-inline-item">Kontakt</li>
+            </ul>
+        </nav>
+        <h1 class="text-uppercase bg-success text-white">Bootstrap 4 - wybrane nowości</h1>
+        <h3 class="text-muted">Opublikowano: 23-10-2017</h3>
+        <img src="./images/unity.png" alt="unity" class="img-fluid float-left" style="width: 260px">
+        <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus amet, id ex magni magnam nostrum, consectetur dolorem aut explicabo numquam voluptas eligendi molestias odit, repellendus error sit quis reprehenderit sapiente.
+        </p>
+        <p class="bg-danger text-white">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, ducimus a temporibus excepturi totam minima quaerat nam consequuntur dicta nobis molestiae atque, sit, ut et. Ipsam delectus porro omnis, nobis adipisci consequuntur accusamus maiores perferendis dolorem ullam ea, assumenda aliquam laboriosam provident ratione, molestiae corrupti accusantium dolores aut deserunt eligendi labore quos enim! Tenetur vero nobis assumenda molestias minus deleniti provident? Consequuntur provident deleniti accusamus! At consectetur harum temporibus illum architecto soluta maiores reiciendis odit sit iure saepe modi, neque voluptatum, inventore id quasi ab tenetur dignissimos blanditiis dicta quae corrupti autem nisi nemo! Non et vero aliquid fugit reprehenderit cumque mollitia recusandae odit veniam natus porro itaque minus aut nulla veritatis maiores nam cupiditate neque, sed quisquam iure ullam. Reiciendis libero rerum beatae laborum enim nam dignissimos possimus. Architecto, quod, similique! Dolore sed ab ipsum voluptatibus quis error, assumenda.
+        </p>
+        <img src="./images/unity.png" alt="Unity" class="img-fluid mx-auto d-block">
+        <h2>Kluczowy cytat</h2>
+        <blockquote class="blockquote">
+            ...lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae a ipsam deleniti modi qui reiciendis magnam, facilis similique harum non, sequi magni, expedita rerum nihil dolores odit quam mollitia ipsa!
+            <div class="blockquote-footer">
+                Jan Kowalski
+            </div>
+        </blockquote>
     </div>
 
 </body>
