--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="container">
-        <nav>
+        <nav class="sticky-top">
             <ul class="list-inline text-primary">
                 <li class="list-inline-item">Start</li>
                 <li class="list-inline-item">Blog</li>
@@ -80,11 +80,17 @@
                     </div>
                 </div>
             </article>
-            <article class="col-4">
+            <article class="col-4 align-self-center">
                 <div class="img-box bg-info"></div>
                 <h3>Lorem ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere commodi nesciunt autem libero excepturi blanditiis assumenda, a nobis provident, repellendus laboriosam. Consectetur vel voluptatibus vero quaerat minus amet eius repellat?</p>
             </article>
+        </div>
+        <div class="btn-group btn-group-vertical">
+            <button class="btn btn-outline-primary">Start</button>
+            <button class="btn btn-outline-primary">Sortuj</button>
+            <button class="btn btn-outline-primary">Edytuj</button>
+            <button class="btn btn-outline-primary">Koniec</button>
         </div>
     </div>
 
