breadcrumb and progress bar

--- a/index.html
+++ b/index.html
@@ -86,11 +86,21 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere commodi nesciunt autem libero excepturi blanditiis assumenda, a nobis provident, repellendus laboriosam. Consectetur vel voluptatibus vero quaerat minus amet eius repellat?</p>
             </article>
         </div>
-        <div class="btn-group btn-group-vertical">
+        <div class="btn-group d-flex justify-content-end">
             <button class="btn btn-outline-primary">Start</button>
             <button class="btn btn-outline-primary">Sortuj</button>
             <button class="btn btn-outline-primary">Edytuj</button>
             <button class="btn btn-outline-primary">Koniec</button>
+        </div>
+        <nav>
+            <ul class="breadcrumb bg-warning">
+                <li class="breadcrumb-item"><a href="#">1</a></li>
+                <li class="breadcrumb-item"><a href="#">2</a></li>
+                <li class="breadcrumb-item active">3</li>
+            </ul>
+        </nav>
+        <div class="progress">
+            <div class="progress-bar w-50 progress-bar-striped progress-bar-animated">50%</div>
         </div>
     </div>
 
