--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
 <div class="container">
         <nav class="sticky-top">
-            <ul class="list-inline text-primary">
-                <li class="list-inline-item">Start</li>
-                <li class="list-inline-item">Blog</li>
-                <li class="list-inline-item">Użytkownicy</li>
-                <li class="list-inline-item">Kontakt</li>
+            <ul class="list-inline bg-primary py-3">
+                <li class="list-inline-item"><a href="#" class="badge badge-pill badge-dark">Start</a></li>
+                <li class="list-inline-item"><a href="#" class="badge badge-pill badge-dark">Blog</a></li>
+                <li class="list-inline-item"><a href="#" class="badge badge-pill badge-dark">Użytkownicy</a></li>
+                <li class="list-inline-item"><a href="#" class="badge badge-pill badge-dark">Kontakt</a></li>
             </ul>
         </nav>
         <h1 class="text-uppercase bg-success text-white text-center text-md-left">Bootstrap 4 - wybrane nowości</h1>
@@ -82,7 +82,7 @@
             </article>
             <article class="col-4 align-self-center">
                 <div class="img-box bg-info"></div>
-                <h3>Lorem ipsum dolor.</h3>
+                <h3>Lorem ipsum dolor.<span class="badge badge-success badge-pill">NEW</span></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere commodi nesciunt autem libero excepturi blanditiis assumenda, a nobis provident, repellendus laboriosam. Consectetur vel voluptatibus vero quaerat minus amet eius repellat?</p>
             </article>
         </div>
@@ -102,6 +102,11 @@
         <div class="progress">
             <div class="progress-bar w-50 progress-bar-striped progress-bar-animated">50%</div>
         </div>
+        <ul class="list-group">
+            <li class="list-group-item">Start</li>
+            <li class="list-group-item">Środek</li>
+            <li class="list-group-item">Koniec</li>
+        </ul>
     </div>
 
 </body>
