jumbotron, table, media

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-<div class="container">
+    <div class="container">
         <nav class="sticky-top">
             <ul class="list-inline bg-primary py-3">
                 <li class="list-inline-item"><a href="#" class="badge badge-pill badge-dark">Start</a></li>
@@ -107,6 +107,81 @@
             <li class="list-group-item">Środek</li>
             <li class="list-group-item">Koniec</li>
         </ul>
+    </div>
+
+    <div class="jumbotron jumbotron-fluid bg-primary text-white text-center">
+        <div class="container">
+            <h1 class="display-3">Nowości w JavaScript ES6</h1>
+            <p class="lead">Zakładka “Edytuj profil” to miejsce, w którym możesz dodać swój avatar, a także napisać kilka słów o sobie, czym się zajmujesz i jakie są Twoje zainteresowania. Dzięki opcji udostępniania profilu, możesz podzielić się informacjami o sobie w dowolnym miejscu.</p>
+            <button class="btn btn-warning btn-lg">Więcej</button>
+        </div>
+    </div>
+
+    <div class="container">
+        <table class="my-5 table table-bordered table-hover">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nazwa</th>
+                <th scope="col">Email</th>
+                <th scope="col">Ostatnie logowanie</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Admin</td>
+                <td>administrator@asd.pl</td>
+                <td>23-10-2017</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Program Partnerski</td>
+                <td>pp@asd.pl</td>
+                <td>20-10-2017</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Współpraca</td>
+                <td>wspolpraca@asd.pl</td>
+                <td>21-10-2017</td>
+            </tr>
+            <tr class="table-danger">
+                <th scope="row">3</th>
+                <td>Biuro</td>
+                <td>biuro@asd.pl</td>
+                <td>26-10-2017</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="container pt-5">
+
+        <div class="media mb-4">
+            <img src="images/wp.jpg" alt="wzorce projektowe" class="mr-4 align-self-center">
+            <div class="media-body">
+                <h3>Wzorce projektowe - wprowadzenie</h3>
+                <p>Poznaj wszystkie najpopularniejsze wzorce projektowe. Zrozum dogłębnie zasadę działania każdego wzorca i poznaj przykłady praktycznego zastosowania. Zdobądź uniwersalną, fundamentalną wiedzę, którą możesz zastosować w dowolnym języku programowania. Opanujesz zaawansowane techniki pracy i zyskasz zupełnie nowe umiejętności, które będziesz mógł rozwijać w swoich własnych projektach.</p>
+            </div>
+        </div>
+
+        <div class="media mb-4">
+            <img src="images/sql.jpg" alt="wzorce projektowe" class="mr-4 align-self-center">
+            <div class="media-body">
+                <h3>SQL - Nowoczesne bazy danych</h3>
+                <p>Poznaj wszystkie najpopularniejsze wzorce projektowe. Zrozum dogłębnie zasadę działania każdego wzorca i poznaj przykłady praktycznego zastosowania. Zdobądź uniwersalną, fundamentalną wiedzę, którą możesz zastosować w dowolnym języku programowania. Opanujesz zaawansowane techniki pracy i zyskasz zupełnie nowe umiejętności, które będziesz mógł rozwijać w swoich własnych projektach.</p>
+            </div>
+        </div>
+
+        <div class="media mb-4">
+            <img src="images/app-js.jpg" alt="wzorce projektowe" class="mr-4 align-self-center">
+            <div class="media-body">
+                <h3>Nowoczesne aplikacje klienckie</h3>
+                <p>Poznaj wszystkie najpopularniejsze wzorce projektowe. Zrozum dogłębnie zasadę działania każdego wzorca i poznaj przykłady praktycznego zastosowania. Zdobądź uniwersalną, fundamentalną wiedzę, którą możesz zastosować w dowolnym języku programowania. Opanujesz zaawansowane techniki pracy i zyskasz zupełnie nowe umiejętności, które będziesz mógł rozwijać w swoich własnych projektach.</p>
+            </div>
+        </div>
+
     </div>
 
 </body>
