--- a/index.html
+++ b/index.html
@@ -184,5 +184,39 @@
 
     </div>
 
+    <div class="jumbotron jumbotron-fluid bg-primary text-white text-center">
+        <div class="container">
+            <h1 class="display-3">Najnowsze artykuły</h1>
+        </div>
+    </div>
+
+    <div class="container pt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card mb-5">
+                    <img src="images/obraz.png" alt="obraz karty" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-title">Trendy w web designie w 2018</h4>
+                        <h5 class="card-subtitle">Webdesign</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque rerum, dolore impedit dicta ducimus.</p>
+                        <a href="#" class="btn btn-primary card-link">Cały artykuł</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-5">
+                    <img src="images/obraz.png" alt="obraz karty" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="card-title">Narzędzia i materiały dla webdesignera</h4>
+                        <h5 class="card-subtitle">Webdesign</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque rerum, dolore impedit dicta ducimus.</p>
+                        <a href="#" class="btn btn-primary card-link">Cały artykuł</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 </html>
