--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="col-md-6">
                 <div class="card mb-5">
                     <img src="images/obraz.png" alt="obraz karty" class="card-img-top">
-                    <div class="card-body">
+                    <div class="card-img-overlay">
                         <h4 class="card-title">Trendy w web designie w 2018</h4>
                         <h5 class="card-subtitle">Webdesign</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque rerum, dolore impedit dicta ducimus.</p>
@@ -206,7 +206,7 @@
             <div class="col-md-6">
                 <div class="card mb-5">
                     <img src="images/obraz.png" alt="obraz karty" class="card-img-top">
-                    <div class="card-body">
+                    <div class="card-img-overlay">
                         <h4 class="card-title">Narzędzia i materiały dla webdesignera</h4>
                         <h5 class="card-subtitle">Webdesign</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque rerum, dolore impedit dicta ducimus.</p>
