--- a/index.html
+++ b/index.html
@@ -13,8 +13,29 @@
             height: 250px;
         }
     </style>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <div class="navbar-nav mr-auto">
+                    <a href="#" class="nav-link nav-item">Start</a>
+                    <a href="#" class="nav-link nav-item active">Artykuły</a>
+                    <a href="#" class="nav-link nav-item">Komentarze</a>
+                    <a href="#" class="nav-link nav-item">Użytkownicy</a>
+                    <a href="#" class="nav-link nav-item">Kontakt</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
         <nav class="sticky-top">
             <ul class="list-inline bg-primary py-3">
@@ -184,6 +205,17 @@
 
     </div>
 
+    <div class="container">
+        <nav class="nav my-4 flex-column flex-md-row nav-pills nav-fill">
+            <a href="#" class="nav-link nav-item active">Start</a>
+            <a href="#" class="nav-link nav-item">Najnowsze artykuły</a>
+            <a href="#" class="nav-link nav-item disabled">Komentarze</a>
+            <a href="#" class="nav-link nav-item">Użytkownicy</a>
+            <a href="#" class="nav-link nav-item">Współpraca</a>
+            <a href="#" class="nav-link nav-item">Kontakt</a>
+        </nav>
+    </div>
+
     <div class="jumbotron jumbotron-fluid bg-primary text-white text-center">
         <div class="container">
             <h1 class="display-3">Najnowsze artykuły</h1>
@@ -226,6 +258,20 @@
         </div>
 
     </div>
+
+    <div class="container">
+        <nav>
+            <ul class="pagination pagination-lg">
+                <li class="page-item disabled"><a class="page-link" href="#">Poprzedni</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item active"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="">Następny</a></li>
+            </ul>
+        </nav>
+    </div>
+
+
 
 </body>
 </html>
